Refactor quiz.html structure and styles

--- a/quiz.html
+++ b/quiz.html
@@ -47,7 +47,12 @@
 <input id="name" placeholder="Enter Name">
 <input id="designation" placeholder="Enter Designation">
 
-<div class="progress" id="progress">Question 1 / 15</div>
+<div id="progress">Question 1 / 15</div>
+
+<div class="progress-wrap">
+  <div class="progress-bar" id="progressBar"></div>
+</div>
+
 
 <!-- QUESTIONS -->
 
@@ -286,3 +291,4 @@ document.getElementById("submitBtn").onclick=async()=>{
 
 </body>
 </html>
+
