--- a/quiz.html
+++ b/quiz.html
@@ -186,9 +186,12 @@ What do you do?</h3>
 <button class="answer" data-q="q15" data-value="Server">Server room</button>
 </div>
 
-<button class="nav-btn" id="prevBtn">Previous</button>
-<button class="nav-btn" id="nextBtn">Next</button>
-<button class="nav-btn" id="submitBtn" style="display:none;">Submit Quiz</button>
+<div class="nav-area">
+  <button class="nav-btn" id="prevBtn">Previous</button>
+  <button class="nav-btn" id="nextBtn">Next</button>
+  <button class="nav-btn" id="submitBtn" style="display:none;">Submit Quiz</button>
+</div>
+
 
 <p id="msg"></p>
 
@@ -291,4 +294,5 @@ document.getElementById("submitBtn").onclick=async()=>{
 
 </body>
 </html>
+
 
