Refactor quiz.html for improved structure and clarity

--- a/quiz.html
+++ b/quiz.html
@@ -59,8 +59,7 @@
 <div class="question active">
 <h3>1️⃣ An employee receives a genuine email from a known vendor.
 The email account was compromised and contains a malicious link.
-What type of attack is this?
-<br>Attack type?</h3>
+What type of attack is this?</h3>
 <button class="answer" data-q="q1" data-value="Spam">Spam</button>
 <button class="answer" data-q="q1" data-value="Generic phishing">Generic phishing</button>
 <button class="answer" data-q="q1" data-value="Spear phishing">Spear phishing via compromised account</button>
@@ -298,6 +297,7 @@ document.getElementById("submitBtn").onclick=async()=>{
 
 </body>
 </html>
+
 
 
 
