Remove emoji from quiz title in index.html

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ img{
 
 <div class="container">
 
-<h1>📱 Cybersecurity Awareness Quiz</h1>
+<h1>Cybersecurity Awareness Quiz</h1>
 
 <p>Scan the QR Code to join</p>
 
