--- a/quiz.html
+++ b/quiz.html
@@ -12,6 +12,7 @@
 .answer{
   display:block;
   width:100%;
+  height:100%;
   margin:8px 0;
   padding:12px;
   background:#334155;
@@ -297,6 +298,7 @@ document.getElementById("submitBtn").onclick=async()=>{
 
 </body>
 </html>
+
 
 
 
