--- a/quiz.html
+++ b/quiz.html
@@ -42,29 +42,20 @@
 
 <div class="container">
 
-  <div class="header">
-    <h1>Cybersecurity Awareness Quiz</h1>
-    <div class="subtitle">Think Before You Click</div>
-  </div>
+<h1>Cybersecurity Awareness Quiz</h1>
 
-  <div class="card">
+<input id="name" placeholder="Enter Name">
+<input id="designation" placeholder="Enter Designation">
 
-    <input id="name" placeholder="Enter Name">
-    <input id="designation" placeholder="Enter Designation">
+<div class="progress" id="progress">Question 1 / 15</div>
 
-    <div class="progress-label">
-      Question <span id="progressText">1</span> / 15
-    </div>
+<!-- QUESTIONS -->
 
-    <div class="progress-wrap">
-      <div class="progress-bar" id="progressBar"></div>
-    </div>
-
-    <!-- Questions here -->
-    <div class="question active">
+<div class="question active">
 <h3>1️⃣ An employee receives a genuine email from a known vendor.
 The email account was compromised and contains a malicious link.
-What type of attack is this?</h3>
+What type of attack is this?
+<br>Attack type?</h3>
 <button class="answer" data-q="q1" data-value="Spam">Spam</button>
 <button class="answer" data-q="q1" data-value="Generic phishing">Generic phishing</button>
 <button class="answer" data-q="q1" data-value="Spear phishing">Spear phishing via compromised account</button>
@@ -190,16 +181,11 @@ What do you do?</h3>
 <button class="answer" data-q="q15" data-value="Server">Server room</button>
 </div>
 
+<button class="nav-btn" id="prevBtn">Previous</button>
+<button class="nav-btn" id="nextBtn">Next</button>
+<button class="nav-btn" id="submitBtn" style="display:none;">Submit Quiz</button>
 
-    <div class="nav-area">
-      <button class="nav-btn secondary-btn" id="prevBtn">Previous</button>
-      <button class="nav-btn" id="nextBtn">Next</button>
-      <button class="nav-btn" id="submitBtn" style="display:none;">Submit Quiz</button>
-    </div>
-
-    <div id="msg"></div>
-
-  </div>
+<p id="msg"></p>
 
 </div>
 
@@ -231,17 +217,14 @@ function showQuestion(i){
  questions.forEach(q=>q.classList.remove("active"));
  questions[i].classList.add("active");
 
-  document.getElementById("progressText").innerText = i + 1;
+ document.getElementById("progress").innerText=
+ `Question ${i+1} / 15`;
 
  document.getElementById("prevBtn").style.display=
  i===0?"none":"inline-block";
 
  document.getElementById("nextBtn").style.display=
  i===14?"none":"inline-block";
-
- document.getElementById("progressBar").style.width =
-  ((i+1)/15*100) + "%";
-
 
  document.getElementById("submitBtn").style.display=
  i===14?"inline-block":"none";
@@ -303,13 +286,3 @@ document.getElementById("submitBtn").onclick=async()=>{
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
