--- a/quiz.html
+++ b/quiz.html
@@ -43,6 +43,7 @@
 <div class="container">
 
 <h1>Cybersecurity Awareness Quiz</h1>
+<div class="subtitle">Think Before You Click</div>
 
 <input id="name" placeholder="Enter Name">
 <input id="designation" placeholder="Enter Designation">
@@ -286,3 +287,4 @@ document.getElementById("submitBtn").onclick=async()=>{
 
 </body>
 </html>
+
